fasit/azure-secrets-store.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: workshop
  labels:
    name: workshop
