fasit/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: workshop
  labels:
    name: workshop
