fasit/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: workshop
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-db
  namespace: workshop
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: azure-storage
      containers:
      - name: database
        image: k8sworkshop404.azurecr.io/sample/postgres:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 500Mi
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
