fasit/frontend-deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: workshop
  labels:
    name: workshop

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: workshop
  labels:
    app: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: workshop
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /svelte
        backend:
          service:
            name: frontend
            port:
              number: 80
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: workshop
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: workshopacrsqr2klsnuxgxa.azurecr.io/sample/frontend:0.1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 500Mi
